<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.11">
  <DUT Name="TRKCtl" Id="{e30e4259-d6ba-4946-9f07-5cd9da297046}">
    <Declaration><![CDATA[TYPE TRKCtl :
STRUCT
	//Irradiation
	AX_NCU						: ARRAY[1..CstNbNCU_G] OF   NCU ; 
	                    		
	MesSnow						: REAL ; 
	MesWindSpeed				: REAL ; 
	MesWindDir					: REAL ; 
	
	MesAlarmCode				: WORD ; 
	MesWarningCode				: WORD ; 
	MesEventCode				: WORD ; 
	
	
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>